--- a/src/main/resources/templates/edit_emp.html
+++ b/src/main/resources/templates/edit_emp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="base :: Layout(~{::title}, ~{::content})" >
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container" th:fragment="content">
   <h1>Edit Employee</h1>
   <p>This is the employee edit page. Here you will add forms to edit existing employees.</p>
 
