--- a/src/main/resources/templates/edit_emp.html
+++ b/src/main/resources/templates/edit_emp.html
@@ -10,12 +10,57 @@
 </head>
 <body>
 <div class="container" th:fragment="content">
-  <h1>Edit Employee</h1>
-  <p>This is the employee edit page. Here you will add forms to edit existing employees.</p>
+  <div class="card">
+    <div class="card-header text-center fs-4">
+      <h1>Edit Employee</h1>
+      <p>This is the employee edit page. Here you will add forms to edit existing employees.</p>
 
+    </div>
+    <div class="card-body">
+      <form action="/updateEmp" method="post">
+        <input type="hidden" th:value="${empById.id}" name="id">
+        <div class="mb-3">
+          <label for="EmployeeName" class="form-label">Full Name </label>
+          <input type="text" class="form-control" id="EmployeeName" name="name" th:value="${empById.name}">
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" th:value="${empById.email}">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="EmployeeAddress" class="form-label">Address </label>
+          <input type="text" class="form-control" id="EmployeeAddress" name="address" th:value="${empById.address}">
+        </div>
+        <div class="mb-3 form-check">
+          <label class="form-check-label">Gender</label>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" value="male" id="genderMale" name="gender"  th:checked="${empById.gender == 'male'}">
+            <label class="form-check-label" for="genderMale" >
+              Male
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" value="female" id="genderFemale" name="gender"  th:checked="${empById.gender == 'female'}" >
+            <label class="form-check-label" for="genderFemale">
+              Female
+            </label>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" name="password" th:value="${empById.password}">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-primary w-50">Update</button>
+        </div>
+      </form>
+    </div>
+  </div>
   <!-- Future: Add employee edit form here -->
 
-  <a href="/" class="back-link">← Back to Home</a>
+
+  <a href="/" class="back-link btn btn-md btn-primary">← Back to Home</a>
 </div>
 </body>
 </html>
