--- a/src/main/resources/templates/emp_save.html
+++ b/src/main/resources/templates/emp_save.html
@@ -10,7 +10,7 @@
 <body>
 <section th:fragment="content">
     <div class="card">
-        <div class="card-header">
+        <div class="card-header text-center fs-4">
             Add Employee
         </div>
         <div class="card-body">
